# NatteeScraper2

./: .env-example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
natteescraper/: __init__.py  constants.py  errors.py  models.py  scraper.py
