[tool.poetry]
name = "nattee-large-scraper"
version = "0.1.0"
description = ""
authors = ["Wongkraiwich Chuenchomphu <wongkraiwich@inedible.dev>", "Jeerabhat Supapinit <kaopancraft@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fuzzywuzzy = "0.18.0"
levenshtein = "0.26.0"
nodeenv = "1.9.1"
python-levenshtein = "0.26.0"
rapidfuzz = "3.10.1"
typing-extensions = "4.12.2"
python-dotenv = "1.0.1"
tqdm = "4.67.1"
pydantic = "2.10.3"
beautifulsoup4 = "4.12.3"
requests = "2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
